--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -6,7 +6,7 @@
 <button (click)="FilterComicBook()" id="btn4">COMIC<br>BOOK</button>
 <button (click)="FilterHorror()" id="btn5">HORROR</button>
 <button (click)="FilterCriticallyAcclaimed()" id="btn6">CRITICALLY<br>ACCLAIMED</button>
-<input id="input1" placeholder="Search by Title, Franchise, Actor..." style="caret-color: black;" [(ngModel)]="searchText">
+<input spellcheck="false" id="input1" placeholder="Search by Title, Franchise, Actor..." style="caret-color: black;" [(ngModel)]="searchText">
 </div>
 
 <img src="../../assets/ASSETS/Nixflix2.png" style="position: fixed; left: 77.5vw; top: 79vh; height: 4.5vw; width: 12vw;">
@@ -16,7 +16,7 @@
 
 <div  id="card-container">
 
-    <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
@@ -25,7 +25,7 @@
 <div *ngIf="!isDisplayed2" id="card1" style="display: flex; justify-content: center; align-items: center;">
 <ul id="component01" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of sciFi | search: searchText">
 <div  id="card-container">
-    <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
@@ -35,7 +35,7 @@
 <div *ngIf="!isDisplayed3" id="card2" style="display: flex; justify-content: center; align-items: center;">
 <ul id="component02" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of action | search: searchText">
 <div  id="card-container">
-    <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
@@ -43,7 +43,7 @@
 <div *ngIf="!isDisplayed4" id="card3" style="display: flex; justify-content: center; align-items: center;">
 <ul id="component03" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of comicBook | search: searchText">
 <div  id="card-container">
-    <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
@@ -52,7 +52,7 @@
 <div *ngIf="!isDisplayed5" id="card4" style="display: flex; justify-content: center; align-items: center;">
 <ul id="component04" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of horror | search: searchText">
 <div  id="card-container">
-    <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
@@ -60,20 +60,20 @@
 <div *ngIf="!isDisplayed6" id="card5" style="display: flex; justify-content: center; align-items: center;">
 <ul id="component05" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of criticallyAcclaimed | search: searchText">
 
-    <div  id="card-container">
-    
+<div  id="card-container">
+
 <a href="{{enteredText.url}}"><li  id="component1"><img src={{enteredText.pic}} alt=""></li></a>
 <li id="component2">{{enteredText.title}}</li>
 <li id="component3">{{enteredText.title2}}</li></div>
 </ul>
 </div>
 <div *ngIf="!isDisplayed7" id="card6" style="display: flex; justify-content: center; align-items: center;">
-    <ul id="component06" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of allMovies | search: searchText">
+<ul id="component06" style="display: flex; justify-content: center; align-items: left;list-style: none;"  *ngFor="let enteredText of allMovies | search: searchText">
 
-        <div  id="card-container">
-        
-        <a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
-    <li id="component2">{{enteredText.title}}</li>
-    <li id="component3">{{enteredText.title2}}</li></div>
-    </ul>
-    </div>
+<div  id="card-container">
+
+<a href="{{enteredText.url}}"><li  id="component1"><img src="{{enteredText.pic}}" alt=""></li></a>
+<li id="component2">{{enteredText.title}}</li>
+<li id="component3">{{enteredText.title2}}</li></div>
+</ul>
+</div>
