--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="container1">
+<div id="container1" style="background-color: black;">
 <app-header></app-header>
 </div>
 <app-searchbar></app-searchbar>
